# send-mail-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  alembic.ini  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  scripts.py
.github/workflows/: tests.yml
almebic/: env.py
almebic/versions/: 11fcdfd3f486_init_db.py
interface/: client_interface.py
repositories/: client_repository.py
routes/: client.py
services/: client_service.py
tests/: conftest.py
tests/integrate/client/: test_internal.py
